--- a/templates/user.html
+++ b/templates/user.html
@@ -1,13 +1,27 @@
-<html>
-  <head>
-    <title>User</title>
-  </head>
-  <body>
-    <form action="http://localhost:5000/user" method="POST">
-      <p>Username: <input type="text" name="name" /></p>
-      <p>Email: <input type="email" name="email" /></p>
-      <p>Age:<input type="number" name="age" /></p>
-      <input type="submit" value="submit" />
-    </form>
-  </body>
-</html>
+<form id="userForm">
+  <p>Username: <input type="text" name="name" /></p>
+  <p>Email: <input type="email" name="email" /></p>
+  <p>Age:<input type="number" name="age" /></p>
+  <button type="submit">Save</button>
+</form>
+<script>
+  document
+    .getElementById("userForm")
+    .addEventListener("submit", function (event) {
+      event.preventDefault(); // Prevent default form submission
+
+      const formData = new FormData(event.target);
+      const jsonData = Object.fromEntries(formData.entries());
+
+      fetch("http://localhost:5000/users", {
+        method: "POST",
+        headers: {
+          "Content-Type": "application/json",
+        },
+        body: JSON.stringify(jsonData),
+      })
+        .then((response) => response.json())
+        .then((data) => console.log(data))
+        .catch((error) => console.error("Error:", error));
+    });
+</script>
